@@ -33,6 +33,7 @@
 	</table><br>
 
 	<INPUT type="button" value="Save" onClick="validate()">
+	<span id="delbutton" style="display: none"><INPUT type="button" value="Delete" onClick="deleteTrip()"></span>
 	<INPUT type="button" value="Cancel" onClick="window.close()">
       </FORM>
 
